@@ -1,4 +1,7 @@
 {{$NEXT}}
+    - Correct Github support paths in META6.json file
+    - Remove 'ask' which is now in its owm module
+    - Remove dependencies in 'test-depends' since it's now in workflows/test.yml
 
 3.1.0  2022-08-22T18:02:43-05:00
     - Export 'ask' as an alias for routine 'prompt
